k8s/services/authentik/extra/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-all
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-outpost-ldap
spec:
  endpointSelector:
    matchLabels:
      goauthentik.io/outpost-name: ldap-outpost
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: services-stalwart
      toPorts:
        - ports:
            - port: "3389"
              protocol: TCP
    - fromCIDR:
        - 172.28.1.90/32
        - 2001:67c:17fc:102::90/128
        - 148.251.148.232/32
        - 2001:67c:17fc::25/128
      toPorts:
        - ports:
            - port: "3389"
              protocol: TCP
